app/assets/stylesheets/views/travel-advice.scss
@import "_device-pixels.scss";

.travel-advice {
  article {
    .list {
      ul {
        padding-left: 0;
      }

      li {
        list-style: none;
        padding-left: 0;
        .meta{
          @include core-16;
          color: $grey-2;

        }
      }
    }

    form#country-filter {
      @include core-19;

      display: none;
      margin: 2em 0 1em;

      .js-enabled & {
        display: block;
      }

      fieldset {
        border-top: 1px solid #A6AAAC;
        border-bottom: 1px solid #A6AAAC;
        padding: 1em 0;
        color: #53595B;

        label {
          display: inline-block;
          margin-right: 5.3em;

          @include ie-lte(7) {
            margin-right: 5.85em;
          }

          @include ie-lte(6) {
            margin-right: 1.3em;
          }
        }

        input {
          display: inline-block;
          border-color: #A6AAAC;
          margin: 0;
        }
      }
    }
  }

  .country-metadata {
    padding: 0;
    margin: 0;
    color: $secondary-text-colour;

    li {
      @include core-16;

      list-style: none;
      padding: 0;
      margin: 0;
    }
  }

  .meta-data .print-link {
    margin: 1em 0;
  }

  .subscriptions  {
    list-style: none;
    padding-left: 2em;

    @include ie(6) {
      list-style-image: none;
    }

    a {
      padding-left: 28px;
      height: 16px;
      background-position: 0 50%;
      background-repeat: no-repeat;

      &.feed {
        background-image: image-url("travel-advice/feed-icon-black.png");
      }

      &.email-alerts {
        background-image: image-url("travel-advice/mail-icon.png");
        @include device-pixel-ratio() {
          background-image: image-url("travel-advice/mail-icon-x2.png");
          background-size: 20px 14px;
        }
      }
    }
  }

  &#wrapper .article-container .subscriptions a:hover { 
    color: #2E8ACA;
  }
}

